# guardian-recovery-protocol

./: DEMO_GUIDE.md  README.md  complete_workflow_build_guide.md
backend/: .env.example  README.md  package-lock.json  package.json
backend/sql/: recovery_deploys.sql
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/routes/: account.routes.ts  index.ts  multisig-deploy.routes.ts  recovery.routes.ts  session.routes.ts  user.routes.ts
backend/src/services/: casper.service.ts  contract.service.ts  deploy.service.ts  index.ts  multisig.service.ts  session.service.ts  user.service.ts
backend/wasm/: add_associated_key.wasm  recovery_registry.wasm  remove_associated_key.wasm  update_associated_keys.wasm  update_thresholds.wasm
contracts/: .gitignore  Cargo.toml  Makefile  README.md  frontend-integration.md  rust-toolchain.toml
contracts/add_associated_key/: Cargo.toml
contracts/add_associated_key/src/: main.rs
contracts/recovery_key_rotation/: Cargo.toml
contracts/recovery_key_rotation/src/: main.rs
contracts/recovery_registry/: Cargo.toml
contracts/recovery_registry/src/: main.rs
contracts/remove_associated_key/: Cargo.toml
contracts/remove_associated_key/src/: main.rs
contracts/types/: Cargo.toml
contracts/types/src/: constants.rs  errors.rs  lib.rs
contracts/update_associated_keys/: Cargo.toml
contracts/update_thresholds/: Cargo.toml
frontend/: README.md  package-lock.json  package.json
frontend/app/dashboard/: page.tsx
frontend/app/execute/: page.tsx
frontend/app/recovery/: page.tsx
frontend/app/setup/: page.tsx
frontend/components/: bitmap-chevron.tsx  email-submission-banner.tsx  hero-section.tsx  principles-section.tsx  signals-section.tsx  split-flap-text.tsx  work-section.tsx
frontend/lib/: api.ts  casper-wallet.ts  validation.ts
my-project/: CHANGELOG.md  README.md
