[package]
name = "add_associated_key"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
casper-contract = { workspace = true }
casper-types = { workspace = true }

[lib]
name = "add_associated_key"
path = "src/lib.rs"

[[bin]]
name = "add_associated_key"
path = "src/main.rs"
bench = false
doctest = false
test = false
