[package]
name = "recovery_key_rotation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
casper-contract = { workspace = true }
casper-types = { workspace = true }

[[bin]]
name = "recovery_key_rotation"
path = "src/main.rs"
bench = false
doctest = false
test = false
