[package]
name = "update_associated_keys"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "update_associated_keys"
path = "src/update_associated_keys.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract.workspace = true
casper-types.workspace = true
